syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "Messages/ObligationShared.proto";
import "NullableGrpcDecimal.proto";

message Obligation {
    int32 ObligationId = 1;

    int32 CustomerOnSAId = 2;
    
    google.protobuf.Int32Value ObligationTypeId = 3;
    
    cis.types.NullableGrpcDecimal InstallmentAmount = 4;

    cis.types.NullableGrpcDecimal LoanPrincipalAmount = 5;

    cis.types.NullableGrpcDecimal CreditCardLimit = 6;

    cis.types.NullableGrpcDecimal AmountConsolidated = 7;

    google.protobuf.Int32Value ObligationState = 8;

    DomainServices.HouseholdService.ObligationCreditor Creditor = 9;
    
    DomainServices.HouseholdService.ObligationCorrection Correction = 10;
}
